# HPC_Arena

./: .travis.yml  CMakeLists.txt  README.md  test.sh
src/: component.h  entity.h  entity_manager.h  game_manager.cpp  game_manager.h  game_master.h  main.cpp  system.h  system_manager.h  texture_cache.cpp  texture_cache.h
src/Components/: collision_bounds.h  movement.h  position.h  sprite.h  velocity.h
src/ECS_core/: component.cpp  component.h  component_base.h  ecs_manager.h  entity-OLD.h  entity.h  entity_manager-OLD.h  entity_manager.h  system.h  system_manager.h
src/Entities/: player.cpp  player.h
src/Rendering/: sprite_batch.cpp  sprite_batch.h  sprite_renderable.h  texture_cache.cpp
src/Systems/: boundary.cpp  boundary.h  collision.cpp  collision.h  movement.cpp  movement.h  renderer.cpp  renderer.h
